<resources>
    <string name="app_name">Synth</string>
    <string name="app_engine_version">Engine version: %1$s</string>
    <string name="device_features_supports_low_latency">Supports low latency: %1$s</string>
    <string name="device_features_supports_pro_latency">Supports pro latency: %1$s</string>
    <string name="synth_title">Synth</string>
    <string name="about_title">About</string>
    <string name="menu_main_about">About</string>
    <string name="control_panel_title">Synth</string>
    <string name="amp_envelope_title">Amp envelope</string>
    <string name="amp_envelope_attack">Attack</string>
    <string name="amp_envelope_decay">Delay</string>
    <string name="amp_envelope_sustain">Sustain</string>
    <string name="amp_envelope_release">Release</string>
    <string name="osc_title">Oscillator %1$d</string>
    <string name="osc_pitch_offset">Pitch</string>
    <string name="osc_waveform">Waveform</string>
    <string name="keyboard_title">Keyboard</string>
    <string name="keyboard_scale_tonic">Tonic</string>
    <string name="keyboard_scale_type">Scale type</string>
    <string name="scale_type_major">Major</string>
    <string name="scale_type_harmonic_minor">Harmonic minor</string>
    <string name="scale_type_minor_pentatonic">Minor pentatonic</string>
    <string name="note_a">A</string>
    <string name="note_a_sharp_b_flat">A&#9839; / B&#9837;</string>
    <string name="note_b">B</string>
    <string name="note_c">C</string>
    <string name="note_c_sharp_d_flat">C&#9839; / D&#9837;</string>
    <string name="note_d">D</string>
    <string name="note_d_sharp_e_flat">D&#9839; / E&#9837;</string>
    <string name="note_e">E</string>
    <string name="note_f">F</string>
    <string name="note_f_sharp_g_flat">F&#9839; / G&#9837;</string>
    <string name="note_g">G</string>
    <string name="note_g_sharp_a_flat">G&#9839; / A&#9837;</string>
    <string name="waveform_sine">Sine</string>
    <string name="waveform_square">Square</string>
    <string name="waveform_triangle">Triangle</string>
    <string name="waveform_noise">Noise</string>
    <string name="filter_title">Filter</string>
    <string name="filter_cutoff">Cutoff</string>
    <string name="filter_resonance">Resonance</string>
</resources>
