<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp_envelope_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <TextView
        android:id="@+id/ampEnvelopeControlsAttackTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp_envelope_attack"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <SeekBar
        android:id="@+id/ampEnvelopeControlsAttackSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ampEnvelopeControlsDecayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp_envelope_decay"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <SeekBar
        android:id="@+id/ampEnvelopeControlsDecaySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ampEnvelopeControlsSustain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp_envelope_sustain"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <SeekBar
        android:id="@+id/ampEnvelopeControlsSustainSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ampEnvelopeControlsReleaseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amp_envelope_release"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <SeekBar
        android:id="@+id/ampEnvelopeControlsReleaseSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
