<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/filter_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/oscControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/filterCutoff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_cutoff"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <SeekBar
                android:id="@+id/filterCutoffControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/filterResonance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_resonance"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <SeekBar
                android:id="@+id/filterResonanceControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

