<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainUi.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/ampEnvelopeControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:contentPadding="8dp">

            <TextView
                android:id="@+id/ampEnvelopeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amp_envelope_title" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/osc1Controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:contentPadding="8dp">

            <TextView
                android:id="@+id/osc1Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/osc_title" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/osc2Controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:contentPadding="8dp">

            <TextView
                android:id="@+id/osc2Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/osc_title" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/keyboardControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:contentPadding="8dp">

            <TextView
                android:id="@+id/keyboardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keyboard_title" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
